# animusicator

./: .gitignore  README.md  TODO.md  requirements.txt  run_app.py  setup_env.sh
assets/shaders/: visualizer.frag  visualizer.vert  visualizer_fallback.frag  visualizer_fallback.vert
config/: default_config.yaml
musicviz/: .flake8  .gitignore  .pre-commit-config.yaml  TODO.md  install_deps.sh  pyenv_setup.sh  pyproject.toml  pytest.ini  run_tests.py  simple_test_pyaudio.py  test_formatting.py  test_logging.py  test_opengl.py  test_pyaudio.py  test_rich.py  test_torch_mps.py  test_yaml.py
musicviz/assets/shaders/: visualizer.frag  visualizer.vert  visualizer_fallback.frag  visualizer_fallback.vert
musicviz/docs/: user_guide.md
musicviz/src/musicviz/: __init__.py  main.py
musicviz/src/musicviz/audio/: __init__.py  capture_test.py  engine.py  feature_extractor.py
musicviz/src/musicviz/config/: __init__.py  settings.py
musicviz/src/musicviz/gui/: __init__.py  main_window.py  visual_widget.py
musicviz/src/musicviz/utils/: __init__.py  config_loader.py  crash_reporter.py  error_handler.py  gpu_context.py  logger.py  logging_setup.py  performance_monitor.py  profiler.py  system_monitor.py
musicviz/src/musicviz/visual/: __init__.py  shaders.py
musicviz/tests/: conftest.py  test_logging.py
musicviz/tests/integration/: test_audio_visual_pipeline.py
src/musicviz/audio/: feature_extractor.py
src/musicviz/gui/: visual_widget.py
